[gd_scene load_steps=15 format=3 uid="uid://du8xc6ryumxk0"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_rp24w"]
[ext_resource type="PackedScene" uid="uid://ea4fhyef2nao" path="res://scenes/player.tscn" id="2_i105w"]
[ext_resource type="PackedScene" uid="uid://pwuknqau0nyx" path="res://scenes/level_2.tscn" id="2_nsm8d"]
[ext_resource type="PackedScene" uid="uid://cuog2q5k8u2wn" path="res://scenes/deathzone.tscn" id="3_yqibe"]
[ext_resource type="PackedScene" uid="uid://dsiq3iyb1lbdx" path="res://scenes/jumppad.tscn" id="4_pk1iw"]
[ext_resource type="PackedScene" uid="uid://c13h08fak34p2" path="res://scenes/ui_layer.tscn" id="4_ybai1"]
[ext_resource type="PackedScene" uid="uid://bdvn6n27u08pc" path="res://scenes/tile_map.tscn" id="7_pwssj"]
[ext_resource type="PackedScene" uid="uid://d1o7fbuybjmmf" path="res://scenes/bg.tscn" id="8_phef4"]
[ext_resource type="PackedScene" uid="uid://b366dxvghu2eu" path="res://scenes/start.tscn" id="9_d5tgw"]
[ext_resource type="PackedScene" uid="uid://dlptm61241710" path="res://scenes/exit.tscn" id="10_tfemq"]
[ext_resource type="PackedScene" uid="uid://b5uxxl68yn2vg" path="res://scenes/invincibilityPotion.tscn" id="13_3qghm"]
[ext_resource type="PackedScene" uid="uid://b7c6cd8cs7uvh" path="res://scenes/jumpboostPotion.tscn" id="14_0t28o"]
[ext_resource type="PackedScene" uid="uid://b0gcv0ydbtfya" path="res://scenes/speedboostPotion.tscn" id="15_4570b"]
[ext_resource type="PackedScene" uid="uid://5vvbeanbw11q" path="res://scenes/timeslowpotion.tscn" id="16_628hy"]

[node name="Level" type="Node2D"]
position = Vector2(243, 137)
script = ExtResource("1_rp24w")
next_level = ExtResource("2_nsm8d")
level_time = 10

[node name="BG" parent="." instance=ExtResource("8_phef4")]

[node name="UILayer" parent="." instance=ExtResource("4_ybai1")]

[node name="deathzone" parent="." instance=ExtResource("3_yqibe")]
position = Vector2(65, 6)

[node name="Object" type="Node2D" parent="."]

[node name="Jumppad" parent="Object" instance=ExtResource("4_pk1iw")]
position = Vector2(-23, 118)

[node name="Traps" type="Node2D" parent="."]
position = Vector2(252, -65)

[node name="TileMap" parent="." instance=ExtResource("7_pwssj")]
position = Vector2(256, 39)
layer_0/tile_data = PackedInt32Array(131071, 393216, 0, 65546, 458752, 0, 65547, 458752, 0, 65548, 458752, 0, 65549, 655360, 1, 131085, 458752, 1, 13, 393216, 0, 131084, 458752, 1, 131083, 458752, 1, 131082, 458752, 1, 196607, 393216, 1, 65536, 458752, 0, 131072, 458752, 1, 65537, 458752, 0, 131073, 458752, 1, 65538, 458752, 0, 131074, 458752, 1, 65539, 458752, 0, 131075, 458752, 1, 65540, 458752, 0, 131076, 458752, 1, 65541, 458752, 0, 131077, 458752, 1, 65542, 458752, 0, 131078, 458752, 1, 65543, 458752, 0, 131079, 458752, 1, 65544, 458752, 0, 131080, 458752, 1, 65545, 458752, 0, 131081, 458752, 1, 14, 655360, 1, 65550, 458752, 1, 131086, 458752, 1, 15, 458752, 1, 65551, 458752, 1, 131087, 458752, 1, 16, 458752, 1, 65552, 458752, 1, 131088, 458752, 1, 17, 458752, 1, 65553, 458752, 1, 131089, 458752, 1, 18, 458752, 1, 65554, 458752, 1, 131090, 458752, 1, 19, 458752, 1, 65555, 458752, 1, 131091, 458752, 1, 20, 458752, 1, 65556, 458752, 1, 131092, 458752, 1, 21, 458752, 1, 65557, 458752, 1, 131093, 458752, 1, 22, 458752, 1, 65558, 458752, 1, 131094, 458752, 1, 23, 458752, 1, 65559, 458752, 1, 131095, 458752, 1, 24, 458752, 1, 65560, 458752, 1, 131096, 458752, 1, 393186, 393216, 0, 458722, 393216, 1, 524258, 393216, 2, 393187, 458752, 0, 458723, 458752, 1, 524259, 458752, 2, 393188, 458752, 0, 458724, 458752, 1, 524260, 458752, 2, 393189, 458752, 0, 458725, 458752, 1, 524261, 458752, 2, 393190, 458752, 0, 458726, 458752, 1, 524262, 458752, 2, 393191, 458752, 0, 458727, 458752, 1, 524263, 458752, 2, 393192, 458752, 0, 458728, 458752, 1, 524264, 458752, 2, 393193, 458752, 0, 458729, 458752, 1, 524265, 458752, 2, 393194, 458752, 0, 458730, 458752, 1, 524266, 458752, 2, 393195, 458752, 0, 458731, 458752, 1, 524267, 458752, 2, 393196, 458752, 0, 458732, 458752, 1, 524268, 458752, 2, 393197, 458752, 0, 458733, 458752, 1, 524269, 458752, 2, 393198, 458752, 0, 458734, 458752, 1, 524270, 458752, 2, 393199, 458752, 0, 458735, 458752, 1, 524271, 458752, 2, 393200, 458752, 0, 458736, 458752, 1, 524272, 458752, 2, 393201, 458752, 0, 458737, 458752, 1, 524273, 458752, 2, 393202, 458752, 0, 458738, 458752, 1, 524274, 458752, 2, 393203, 458752, 0, 458739, 458752, 1, 524275, 458752, 2, 393204, 458752, 0, 458740, 458752, 1, 524276, 458752, 2, 393205, 458752, 0, 458741, 458752, 1, 524277, 458752, 2, 393206, 458752, 0, 458742, 458752, 1, 524278, 458752, 2, 393207, 458752, 0, 458743, 458752, 1, 524279, 458752, 2, 393208, 458752, 0, 458744, 458752, 1, 524280, 458752, 2, 393209, 458752, 0, 458745, 458752, 1, 524281, 458752, 2, 393210, 458752, 0, 458746, 458752, 1, 524282, 458752, 2, 393211, 458752, 0, 458747, 458752, 1, 524283, 458752, 2, 393212, 458752, 0, 458748, 458752, 1, 524284, 458752, 2, 393213, 458752, 0, 458749, 458752, 1, 524285, 458752, 2, 393214, 458752, 0, 458750, 458752, 1, 524286, 458752, 2, 196595, 1114112, 1, 196596, 1179648, 1, 196597, 1245184, 1, 196583, 458752, 0, 262119, 458752, 1, 327655, 458752, 2, 196584, 458752, 0, 262120, 458752, 1, 327656, 458752, 2, 196585, 524288, 0, 262121, 524288, 1, 327657, 524288, 2, 196578, 393216, 0, 262114, 393216, 1, 327650, 393216, 2, 196579, 458752, 0, 262115, 458752, 1, 327651, 458752, 2, 196580, 458752, 0, 262116, 458752, 1, 327652, 458752, 2, -30, 1114112, 1, -29, 1179648, 1, -28, 1245184, 1, -131097, 1114112, 1, -131096, 1179648, 1, -131095, 1245184, 1, -262174, 1114112, 1, -262173, 1179648, 1, -262172, 1245184, 1, 196581, 458752, 0, 262117, 458752, 1, 327653, 458752, 2, 196582, 458752, 0, 262118, 458752, 1, 327654, 458752, 2, 458779, 524288, 2, 393243, 524288, 1, 327707, 524288, 1, 262171, 524288, 1, 196635, 524288, 1, 131099, 524288, 1, 458778, 458752, 2, 393242, 458752, 1, 327706, 458752, 1, 262170, 458752, 1, 196634, 458752, 1, 131098, 458752, 1, 458777, 458752, 2, 393241, 458752, 1, 327705, 458752, 1, 262169, 458752, 1, 196633, 458752, 1, 131097, 458752, 1, 458776, 458752, 2, 393240, 458752, 1, 327704, 458752, 1, 262168, 458752, 1, 196632, 458752, 1, 458775, 458752, 2, 393239, 458752, 1, 327703, 458752, 1, 262167, 458752, 1, 196631, 458752, 1, 458774, 458752, 2, 393238, 458752, 1, 327702, 458752, 1, 262166, 458752, 1, 196630, 458752, 1, 458773, 458752, 2, 393237, 458752, 1, 327701, 458752, 1, 262165, 458752, 1, 196629, 458752, 1, 458772, 458752, 2, 393236, 458752, 1, 327700, 458752, 1, 262164, 458752, 1, 196628, 458752, 1, 458771, 458752, 2, 393235, 458752, 1, 327699, 458752, 1, 262163, 458752, 1, 196627, 458752, 1, 458770, 458752, 2, 393234, 458752, 1, 327698, 458752, 1, 262162, 458752, 1, 196626, 458752, 1, 458769, 458752, 2, 393233, 458752, 1, 327697, 458752, 1, 262161, 458752, 1, 196625, 458752, 1, 458768, 458752, 2, 393232, 458752, 1, 327696, 458752, 1, 262160, 458752, 1, 196624, 458752, 1, 458767, 458752, 2, 393231, 458752, 1, 327695, 458752, 1, 262159, 458752, 1, 196623, 458752, 1, 458766, 458752, 2, 393230, 458752, 1, 327694, 458752, 1, 262158, 458752, 1, 196622, 458752, 1, 458765, 458752, 2, 393229, 458752, 1, 327693, 458752, 1, 262157, 458752, 1, 196621, 458752, 1, 458764, 458752, 2, 393228, 458752, 1, 327692, 458752, 1, 262156, 458752, 1, 196620, 458752, 1, 458763, 458752, 2, 393227, 458752, 1, 327691, 458752, 1, 262155, 458752, 1, 196619, 458752, 1, 458762, 458752, 2, 393226, 458752, 1, 327690, 458752, 1, 262154, 458752, 1, 196618, 458752, 1, 458761, 458752, 2, 393225, 458752, 1, 327689, 458752, 1, 262153, 458752, 1, 196617, 458752, 1, 458760, 458752, 2, 393224, 458752, 1, 327688, 458752, 1, 262152, 458752, 1, 196616, 458752, 1, 458759, 458752, 2, 393223, 458752, 1, 327687, 458752, 1, 262151, 458752, 1, 196615, 458752, 1, 458758, 458752, 2, 393222, 458752, 1, 327686, 458752, 1, 262150, 458752, 1, 196614, 458752, 1, 458757, 458752, 2, 393221, 458752, 1, 327685, 458752, 1, 262149, 458752, 1, 196613, 458752, 1, 458756, 458752, 2, 393220, 458752, 1, 327684, 458752, 1, 262148, 458752, 1, 196612, 458752, 1, 458755, 458752, 2, 393219, 458752, 1, 327683, 458752, 1, 262147, 458752, 1, 196611, 458752, 1, 458754, 458752, 2, 393218, 458752, 1, 327682, 458752, 1, 262146, 458752, 1, 196610, 458752, 1, 458753, 458752, 2, 393217, 458752, 1, 327681, 458752, 1, 262145, 458752, 1, 196609, 458752, 1, 458752, 458752, 2, 393216, 458752, 1, 327680, 458752, 1, 262144, 458752, 1, 196608, 458752, 1, 524287, 458752, 2, 458751, 458752, 1, 393215, 655360, 1, 327679, 393216, 1, 262143, 393216, 1, -65519, 458752, 1, -131054, 458752, 1, -65518, 458752, 1, -196589, 458752, 1, -131053, 458752, 1, -65517, 458752, 1, -262124, 458752, 0, -196588, 458752, 1, -131052, 458752, 1, -65516, 458752, 1, -262123, 458752, 0, -196587, 458752, 1, -131051, 458752, 1, -65515, 458752, 1, -262122, 458752, 0, -196586, 458752, 1, -131050, 458752, 1, -65514, 458752, 1, -262121, 524288, 0, -196585, 589824, 1, -131049, 458752, 1, -65513, 458752, 1, -196584, 524288, 0, -131048, 589824, 1, -65512, 458752, 1, -131047, 458752, 0, -65511, 458752, 1, 25, 458752, 1, 65561, 458752, 1, -65510, 524288, 0, 26, 589824, 1, 65562, 458752, 1, 27, 524288, 0, 65563, 524288, 1, -65522, 393216, 0, -131057, 393216, 0, -65521, 655360, 1, -196592, 393216, 0, -131056, 655360, 1, -65520, 458752, 1, -262127, 393216, 0, -196591, 655360, 1, -131055, 458752, 1, -262126, 458752, 0, -196590, 458752, 1, -262125, 458752, 0)

[node name="Start" parent="." instance=ExtResource("9_d5tgw")]
position = Vector2(-137, 39)

[node name="Exit" parent="." instance=ExtResource("10_tfemq")]
position = Vector2(582, -23)

[node name="Player" parent="." instance=ExtResource("2_i105w")]
collision_mask = 5

[node name="invincibilityPotion" parent="." instance=ExtResource("13_3qghm")]
position = Vector2(50, 291)

[node name="jumpboostpotion" parent="." instance=ExtResource("14_0t28o")]
position = Vector2(-63, 283)

[node name="speedboostPotion" parent="." instance=ExtResource("15_4570b")]
position = Vector2(68, 250)

[node name="timeslowpotion" parent="." instance=ExtResource("16_628hy")]
position = Vector2(131, 283)

[connection signal="player_took_invincibility" from="." to="Player" method="_on_level_player_took_invincibility"]
[connection signal="player_took_jump_boost" from="." to="Player" method="_on_level_player_took_jump_boost"]
[connection signal="player_took_slow_time" from="." to="Player" method="_on_level_player_took_slow_time"]
[connection signal="player_took_speed_boost" from="." to="Player" method="_on_level_player_took_speed_boost"]
[connection signal="took_invincibility" from="invincibilityPotion" to="." method="_on_invincibility_potion_took_invincibility"]
[connection signal="took_jump_boost" from="jumpboostpotion" to="." method="_on_jumpboostpotion_took_jump_boost"]
[connection signal="took_speed_boost" from="speedboostPotion" to="." method="_on_speedboost_potion_took_speed_boost"]
[connection signal="took_time_slow" from="timeslowpotion" to="." method="_on_timeslowpotion_took_time_slow"]
